test/should-fail/jfxc4038sub.visage
/**
 * @subtest jfxc4038test.visage
 *
 *
 */
public var f=function(){jfxc4038test{}.func()}